Refector & Rename SearchTypeControl.js 1) Refector & Rename SearchTypeControl.js -> SearchControl.js 2) Fix Calendar visible Control (SearchControl)

--- a/public/stylesheets/index/header.css
+++ b/public/stylesheets/index/header.css
@@ -58,11 +58,12 @@
     text-align: center;
 }
 
-/* 2-1) 검색 : 검색 타입 (옵션) */
-.header__main__search__types > input[type='radio'] {
+/* 2-1) 검색 : 공통 (input=radio) 관련 */
+.header__main__search input[type='radio'] {
     display: none;
 }
 
+/* 2-2) 검색 : 검색 타입 (옵션) */
 .header__main__search__types > input[type='radio'] + label {
     display: inline-block;    
     padding: 0 13px;
@@ -83,7 +84,7 @@
     border-bottom: 2px solid var(--default-font-color);
 }
 
-/* 2-2) 검색 : 검색바 */
+/* 2-3) 검색 : 검색바 */
 .header__main__search__bar {
     position: relative;
     top: 22px;    
@@ -110,12 +111,14 @@
     line-height: initial;
 }
 
-.header__main__search__bar > label:hover {
+.header__main__search__bar > label:hover { 
     background-color: var(--covid-searchBar-hover-color);
 }
 
-.header__main__search__bar > input[type="button"] {
-    display: none;
+.header__main__search__bar > input[type='radio']:checked + label {
+    border: 1px solid var(--default-font-color);
+    background-color: var(--default-font-color);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 20px;
 }
 
 .header__main__search__bar > label > p {
